Updates for Slave networking, passowrds, firmware update link

--- a/SECN-build/files/www/cgi-bin/config/html/config-olpc.html
+++ b/SECN-build/files/www/cgi-bin/config/html/config-olpc.html
@@ -136,6 +136,11 @@ cat > /tmp/config.html << EOF
 							<td class="field"><input type="text" name="TZ" id="tz" VALUE=$TZ> </td>
 						</tr>
 					</table>
+					<table>
+						<tr> <br></br>
+							<a href="/cgi-bin/upgrade">Firmware upgrade.</a>
+						</tr>
+					</table>
 				</fieldset>
 
 		<h3>Status</h3>  <strong>IP:</strong> $IP ... <strong>WiFi Channel:</strong> $CHANNEL ... <strong>WiFi Name:</strong> $WIFINAME
